Generalized template rendering. Support for 'ScriptSrc' and 'ScriptName' in 'kernel.Component'. Support for generating an 'perf' service in model activation. Support 'xgress_proxy' in the 'ingress_router' configuration.

--- a/lib/templates/cfg/ingress_router.yml
+++ b/lib/templates/cfg/ingress_router.yml
@@ -15,6 +15,9 @@ ctrl:
 listeners:
   - binding:            transport
     address:            tls:0.0.0.0:7001
+  - binding:            proxy
+    address:            tls:0.0.0.0:7002
+    service:            iperf
 
 dialers:
   - binding:            transport
