Roughed in iperf support up and functional.

--- a/lib/templates/cfg/ingress_router.yml
+++ b/lib/templates/cfg/ingress_router.yml
@@ -16,7 +16,7 @@ listeners:
   - binding:            transport
     address:            tls:0.0.0.0:7001
   - binding:            proxy
-    address:            tls:0.0.0.0:7002
+    address:            tcp:0.0.0.0:7002
     service:            iperf
 
 dialers:
