Up, and viable ziti network in the new characterization model:
$ ziti-fabric -i fablab list links

Links: (14)

Id     | Src                      -> Dst                      | State        | Cost | Latency
D8PD   | local                    -> long                     | Connected    | 1    | 0.1995 0.1994
4LeD   | local                    -> medium                   | Connected    | 1    | 0.1797 0.1798
jYZ4   | local                    -> short                    | Connected    | 1    | 0.0618 0.0617
jOnl   | long                     -> local                    | Connected    | 1    | 0.1995 0.1995
DB54   | long                     -> medium                   | Connected    | 1    | 0.2269 0.2267
Dxzj   | long                     -> medium                   | Connected    | 1    | 0.2267 0.2266
DNbD   | long                     -> short                    | Connected    | 1    | 0.1374 0.1374
D73D   | medium                   -> local                    | Connected    | 1    | 0.1802 0.1801
jXrD   | medium                   -> long                     | Connected    | 1    | 0.2234 0.2233
jA8l   | medium                   -> long                     | Connected    | 1    | 0.2234 0.2235
4roD   | medium                   -> short                    | Connected    | 1    | 0.2307 0.2308
497l   | short                    -> local                    | Connected    | 1    | 0.0597 0.0597
lM9l   | short                    -> long                     | Connected    | 1    | 0.1374 0.1373
j3Oj   | short                    -> medium                   | Connected    | 1    | 0.2309 0.2308

--- a/lib/templates/cfg/egress_router.yml
+++ b/lib/templates/cfg/egress_router.yml
@@ -14,3 +14,7 @@ ctrl:
 
 dialers:
   - binding:            transport
+
+link:
+  listener:             tls:0.0.0.0:6000
+  advertise:            tls:{{ .Host.PublicIp }}:6000
