--- a/lib/templates/cfg/ingress_router.yml
+++ b/lib/templates/cfg/ingress_router.yml
@@ -21,3 +21,7 @@ listeners:
 
 dialers:
   - binding:            transport
+
+link:
+  listener:             tls:0.0.0.0:6000
+  advertise:            tls:{{ .Host.PublicIp }}:6000
