--- a/lib/templates/cfg/egress_router.yml
+++ b/lib/templates/cfg/egress_router.yml
@@ -1,20 +1,26 @@
+{{$ssh_username := .Model.MustVariable "credentials" "ssh" "username"}}
+{{$identity := .Component.PublicIdentity}}
+{{$protocol := .Model.MustVariable "characterization" "fabric" "data_plane_protocol"}}
+{{$ctrl_ip := publicIp "ctrl" "ctrl"}}
+{{$router_ip := .Host.PublicIp}}
+
 v: 2
 
 forwarder:
   latencyProbeInterval: 1000
 
 identity:
-  cert:                 /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-client.cert
-  server_cert:          /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.cert
-  key:                  /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/keys/{{ .Component.PublicIdentity }}.key
-  ca:                   /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.chain.pem
+  cert:                 /home/{{$ssh_username}}/fablab/pki/intermediate/certs/{{$identity}}-client.cert
+  server_cert:          /home/{{$ssh_username}}/fablab/pki/intermediate/certs/{{$identity}}-server.cert
+  key:                  /home/{{$ssh_username}}/fablab/pki/intermediate/keys/{{$identity}}.key
+  ca:                   /home/{{$ssh_username}}/fablab/pki/intermediate/certs/{{$identity}}-server.chain.pem
 
 ctrl:
-  endpoint:             tls:{{ publicIp "ctrl" "ctrl" }}:6262
+  endpoint:             tls:{{$ctrl_ip}}:6262
 
 dialers:
   - binding:            transport
 
 link:
-  listener:             tls:0.0.0.0:6000
-  advertise:            tls:{{ .Host.PublicIp }}:6000
+  listener:             {{$protocol}}:0.0.0.0:6000
+  advertise:            {{$protocol}}:{{$router_ip}}:6000
