Even without namedspace configuration templates (#21), let's try keeping the controller database (ctrl.db) around between sync runs.

--- a/lib/templates/cfg/ctrl.yml
+++ b/lib/templates/cfg/ctrl.yml
@@ -1,6 +1,6 @@
 v: 3
 
-db:                     /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/ctrl.db
+db:                     /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/ctrl.db
 
 identity:
   cert:                 /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-client.cert
