--- a/lib/templates/cfg/ingress_router.yml
+++ b/lib/templates/cfg/ingress_router.yml
@@ -4,7 +4,7 @@
 {{$ctrl_ip := publicIp "ctrl" "ctrl"}}
 {{$router_ip := .Host.PublicIp}}
   
-v: 2
+v: 3
 
 forwarder:
   latencyProbeInterval: 1000
@@ -34,5 +34,9 @@ dialers:
   - binding:            transport
 
 link:
-  listener:             {{$protocol}}:0.0.0.0:6000
-  advertise:            {{$protocol}}:{{$router_ip}}:6000
+  listeners:
+    - binding:          transport
+      bind:             {{$protocol}}:0.0.0.0:6000
+      advertise:        {{$protocol}}:{{$router_ip}}:6000
+  dialers:
+    - binding:          transport
