--- a/lib/templates/cfg/ingress_router_edge.yml
+++ b/lib/templates/cfg/ingress_router_edge.yml
@@ -1,41 +1,45 @@
-v: 2
+v: 3
 
 forwarder:
   latencyProbeInterval: 1000
 
 identity:
-  cert:                 /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-client.cert
-  server_cert:          /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.cert
-  key:                  /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/keys/{{ .Component.PublicIdentity }}.key
-  ca:                   /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.chain.pem
+  cert: /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-client.cert
+  server_cert: /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.cert
+  key: /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/keys/{{ .Component.PublicIdentity }}.key
+  ca: /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.chain.pem
 
 ctrl:
-  endpoint:             tls:{{ publicIp "ctrl" "ctrl" }}:6262
+  endpoint: tls:{{ publicIp "@ctrl" "@ctrl" }}:6262
 
 listeners:
-  - binding:            proxy
-    address:            tcp:0.0.0.0:7001
-    service:            iperf
+  - binding: proxy
+    address: tcp:0.0.0.0:7001
+    service: iperf
 
-#  - binding:            proxy_udp
-#    address:            udp:0.0.0.0:7001
-#    service:            iperf_udp
+  #  - binding:            proxy_udp
+  #    address:            udp:0.0.0.0:7001
+  #    service:            iperf_udp
 
-  - binding:            transport
-    address:            tls:0.0.0.0:7002
+  - binding: transport
+    address: tls:0.0.0.0:7002
 
   - binding: edge
     address: tls:0.0.0.0:6262
     options:
       # (required) The public hostname and port combination that Ziti SDKs should connect on. Previously this was in the chanIngress section.
-      advertise: {{ .Host.PublicIp }}:6262
+      advertise: "{{ .Host.PublicIp }}:6262"
 
 dialers:
-  - binding:            transport
+  - binding: transport
 
 link:
-  listener:             tls:0.0.0.0:6000
-  advertise:            tls:{{ .Host.PublicIp }}:6000
+  dialers:
+    - binding: transport
+  listeners:
+    - binding: transport
+      bind: tls:127.0.0.1:6000
+      advertise: tls:{{ .Host.PublicIp }}:6000
 
 # By having an 'edge' section defined, the ziti-router will attempt to parse the edge configuration. Removing this
 # section, commenting out, or altering the name of the section will cause the router to no longer operate as an Edge
@@ -54,7 +58,7 @@ edge:
     # the edge listeners "advertise" value from the "listeners" section.
     sans:
       ip:
-        - {{ .Host.PublicIp}}
+        - {{ .Host.PublicIp }}
 
   # (optional) Configuration specific to the controller's API that is proxied through this process. If not defined
   # the API Proxy will not run.
@@ -62,4 +66,4 @@ edge:
     # (required) The interface and port that the Edge API should be served on.
     listener: 0.0.0.0:1080
     # (required) The hostname and port combination to the ziti-controller hosted Edge API
-    upstream: {{ publicIp "ctrl" "ctrl" }}:1280
+    upstream: {{ publicIp "@ctrl" "@ctrl" }}:1280
