--- a/lib/templates/cfg/egress_router.yml
+++ b/lib/templates/cfg/egress_router.yml
@@ -1,7 +1,7 @@
 {{$ssh_username := .Model.MustVariable "credentials" "ssh" "username"}}
 {{$identity := .Component.PublicIdentity}}
 {{$protocol := .Model.MustVariable "zitilib" "fabric" "data_plane_protocol"}}
-{{$ctrl_ip := publicIp "@ctrl" "@ctrl"}}
+{{$ctrl_ip := publicIp "ctrl"}}
 {{$router_ip := .Host.PublicIp}}
 
 v: 3
