--- a/lib/templates/cfg/edge_router.yml
+++ b/lib/templates/cfg/edge_router.yml
@@ -1,4 +1,4 @@
-v: 2
+v: 3
 
 forwarder:
   latencyProbeInterval: 1000
@@ -28,15 +28,19 @@ listeners:
     address: tls:0.0.0.0:6262
     options:
       # (required) The public hostname and port combination that Ziti SDKs should connect on. Previously this was in the chanIngress section.
-      advertise: { { .Host.PublicIp } }:6262
+      advertise: {{ .Host.PublicIp }}:6262
 
 dialers:
   - binding: transport
   - binding: edge
 
 link:
-  listener: tls:0.0.0.0:6000
-  advertise: tls:{{ .Host.PublicIp }}:6000
+  dialers:
+    - binding: transport
+  listeners:
+    - binding: transport
+      bind: tls:0.0.0.0:6000
+      advertise: tls:{{ .Host.PublicIp }}:6000
 
 # By having an 'edge' section defined, the ziti-router will attempt to parse the edge configuration. Removing this
 # section, commenting out, or altering the name of the section will cause the router to no longer operate as an Edge
@@ -56,11 +60,3 @@ edge:
     sans:
       ip:
         - {{ .Host.PublicIp }}
-
-  # (optional) Configuration specific to the controller's API that is proxied through this process. If not defined
-  # the API Proxy will not run.
-  apiProxy:
-    # (required) The interface and port that the Edge API should be served on.
-    listener: 0.0.0.0:1080
-    # (required) The hostname and port combination to the ziti-controller hosted Edge API
-    upstream: {{ publicIp ".ctrl" }}:1280
