--- a/lib/templates/cfg/edge_router.yml
+++ b/lib/templates/cfg/edge_router.yml
@@ -10,7 +10,7 @@ identity:
   ca: /home/{{ .Model.MustVariable "credentials" "ssh" "username" }}/fablab/pki/intermediate/certs/{{ .Component.PublicIdentity }}-server.chain.pem
 
 ctrl:
-  endpoint: tls:{{ publicIp ".ctrl" }}:6262
+  endpoint: tls:{{ publicIp "component.ctrl" }}:6262
 
 listeners:
   - binding: proxy
