Temporarily disable metrics instrumentation for westworld3.

--- a/lib/templates/cfg/transwarp_ingress_router.yml
+++ b/lib/templates/cfg/transwarp_ingress_router.yml
@@ -56,11 +56,11 @@ dialers:
     options:
       txPortalStartSize:  524288
 
-transport:
-  westworld3:
-    profile_version:    1
-    instrument:
-      name:             metrics
-      path:             logs
-      snapshot_ms:      250
-      enabled:          true
+#transport:
+#  westworld3:
+#    profile_version:    1
+#    instrument:
+#      name:             metrics
+#      path:             logs
+#      snapshot_ms:      250
+#      enabled:          true
