Disable UDP proxy.

--- a/lib/templates/cfg/transwarp_ingress_router.yml
+++ b/lib/templates/cfg/transwarp_ingress_router.yml
@@ -44,9 +44,9 @@ listeners:
     address:              tcp:0.0.0.0:7001
     service:              iperf
 
-  - binding:              proxy_udp
-    address:              udp:0.0.0.0:7001
-    service:              iperf_udp
+#  - binding:              proxy_udp
+#    address:              udp:0.0.0.0:7001
+#    service:              iperf_udp
 
   - binding:              transport
     address:              tls:0.0.0.0:7002
