Fix dependabot config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,7 @@ updates:
   groups:
     all:
       applies-to: version-updates
+      update-types:
+        - "major"
+        - "minor"
+        - "patch"
