--- a/.github/workflows/mattermost-webhook.yml
+++ b/.github/workflows/mattermost-webhook.yml
@@ -20,9 +20,7 @@ jobs:
       ZITI_LOG: 99
       ZITI_NODEJS_LOG: 99
     steps:
-      - uses: openziti/ziti-webhook-action@main
+      - uses: openziti/ziti-webhook-action@v1
         with:
           ziti-id: ${{ secrets.ZITI_MATTERMOST_IDENTITY }}
-          webhook-url: ${{ secrets.ZITI_MATTERMOST_WEBHOOK_URL }}
-          webhook-secret: ${{ secrets.ZITI_MATTERMOSTI_WEBHOOK_SECRET }}
-
+          webhook-url: ${{ secrets.ZHOOK_URL_DEV_NOTIFICATIONS }}
